# taifoon-mamba

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: COST_OPTIMIZER.md  DISPATCHER.md
taifoon_mamba/: __init__.py  cost_optimizer.py  dispatcher.py  synthetic.py
tests/: test_cost_optimizer.py  test_dispatcher.py
